# INT8Quants-for-anima-experimental

./: .comfyignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  __init__.py  nodes.py  pyproject.toml  service.py
.github/workflows/: ci.yml
docs/: architecture.md  compatibility.md  development.md  krea2.md  validation.md
examples/workflows/: anima_int8_convrot.json  krea2_int8_convrot.json
quantization/: __init__.py  anima.py  contracts.py  convrot.py  export.py  krea2.py
tests/: test_krea2_quantization.py  test_quantization.py  test_schema.py  test_service.py
tools/: validate_release_archive.py
